kubernetes/archive/echo-server/app/ext-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ext-echo-server
  namespace: default
  labels:
    app.kubernetes.io/instance: echo-server
    app.kubernetes.io/name: echo-server
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_CLOUDFLARED_TUNNEL_ID}.cfargotunnel.com"
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "echo.${SECRET_EXT_DOMAIN}"
      secretName: ext-echo-server-tls
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echo-server
                port:
                  number: 8080
